[package]
name = "monkey-lang-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monkey-lang-interpreter = { path = "../monkey-lang-interpreter" }
monkey-lang-core = { path = "../monkey-lang-core" }
thiserror = "1.0.61"
num_enum = "0.7.2"
