[package]
name = "monkey-lang-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monkey-lang-interpreter = {path = "../monkey-lang-interpreter"}
monkey-lang-core = {path = "../monkey-lang-core"}
clap = { version = "4.3.23", features = ["derive"] }
rustyline = "12.0.0"
